2008-05-30  Mark Wielaard  <mark@klomp.org>

	* patches/icedtea-ecj.patch: Use `cat file-list` not gjar -@ stdin.

2008-05-30  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (check-jdk): Use BUILD_OUTPUT_DIR not LINUX_DIR.
	(check-langtools): Likewise.
	(check-hotspot): Likewise.
	* Makefile.in: Regenerated.

2008-05-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* .hgignore:
	Don't ignore UNIXProcess.java.
	* Makefile.am:
	Remove generated.stamp and make the ports
	dist dependency explicitly on the directory,
	not the make target.
	* b/Makefile.in: Regenerated.
	* b/acinclude.m4:
	(SET_OS): Removed.
	* b/configure: Regenerated.
	* b/configure.ac: Remove call to SET_OS.
	* b/generated/java/lang/UNIXProcess.java:
	Readded.

2008-05-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* aclocal.m4,
	* configure: Regenerated.
	* configure.ac: Use enableval
	with --enable options.

2008-05-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp:
	(allocatable_physical_memory): Removed as now implemented
	in main tree.

2008-05-28  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Updated.

2008-05-28  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated for release.

2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(ports-ecj.stamp): Pick up ports file from
	srcdir.
	(ports.stamp): Likewise.
	* Makefile.in: Regenerated.
	* .hgignore: Add UNIXProcess.java
	
2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Apply zero patches at the end, not the start
	so that the version of vm_version.cpp to which
	icedtea-core-build.patch applies is known.
	* Makefile.in: Regenerated.
	* patches/icedtea-hotspot7-build-fixes.patch:
	Regenerated against the version of vm_version.cpp
	modified by icedtea-core-build.patch.
	
2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Ensure we generate UNIXProcess.java in the